@@ -220,7 +220,9 @@ struct dhcp_t {
   int (*cb_request) (struct dhcp_conn_t *conn, struct in_addr *addr, uint8_t *pack, size_t len);
   int (*cb_connect) (struct dhcp_conn_t *conn);
   int (*cb_disconnect) (struct dhcp_conn_t *conn, int term_cause);
+#ifdef ENABLE_CHILLIQUERY
   int (*cb_getinfo) (struct dhcp_conn_t *conn, bstring b, int fmt);
+#endif
 };
 
 
@@ -271,8 +273,10 @@ int dhcp_set_cb_connect(struct dhcp_t *this,
 int dhcp_set_cb_eap_ind(struct dhcp_t *this, 
   int (*cb_eap_ind) (struct dhcp_conn_t *conn, uint8_t *pack, size_t len));
 
+#ifdef ENABLE_CHILLIQUERY
 int dhcp_set_cb_getinfo(struct dhcp_t *this, 
   int (*cb_getinfo) (struct dhcp_conn_t *conn, bstring b, int fmt));
+#endif
 
 int dhcp_hashget(struct dhcp_t *this, struct dhcp_conn_t **conn, uint8_t *hwaddr);
 
