@@ -39,6 +39,9 @@ static const char *compile_options = "Compiled with "
 #ifdef ENABLE_BINSTATFILE
   "ENABLE_BINSTATFILE "
 #endif
+#ifdef ENABLE_CHILLIQUERY
+  "ENABLE_CHILLIQUERY "
+#endif
 #ifdef ENABLE_CHILLIPROXY
   "ENABLE_CHILLIPROXY "
 #endif
