@@ -8,6 +8,8 @@
 * Fixed ''uamdomain'' such that it will only match exactly the given name or prefixed with anything dot ('.') name
 * Added Pragma no cache and Expires headers to redirect HTTP responses
 * Fixed ''chilli_proxy'' bug for when DNS is down
+* The default will now be to --disable-chillixml (enable with --enable-chillixml)
+* Support for ''chilli_query'' can be removed at build-time with ''--disable-chilliquery''
 
 == ChangeLog (CoovaChilli-v1.2.5 svn revision 394) ==
 
